# PLHM

./: .gitignore  AGENTS.md  DEPGRAPH.md  MEMORY.md  PLAN.md  README.md  main.py  pyproject.toml
conf/: config.yaml
docs/: plhm-design-tutorial.md
frontend/depgraph/: api.js  app.js  graph.js  index.html  styles.css
plhm/: __init__.py  app.py  hydra_loader.py  mlflow.py  reporting.py  runtime.py  settings.py
plhm/depgraph/: __init__.py  __main__.py  analyzer.py  cli.py  contracts.py  rules.py  server.py  snapshot_service.py  watcher.py
plhm/integrations/: __init__.py  lightning_mlflow.py
plhm/lightning/: __init__.py  datamodule.py  module.py
plhm/pytorch/: __init__.py  data.py  model.py
tests/: test_depgraph_cli.py  test_depgraph_frontend.py
