[project]
name = "plhm"
version = "0.1.0"
description = "PyTorch + Lightning + Hydra + MLflow GPU hello world"
readme = "README.md"
requires-python = ">=3.13,<3.14"
dependencies = [
    "hydra-core==1.3.2",
    "lightning==2.6.1",
    "mlflow==3.11.1",
    "torch==2.6.0",
]

[tool.uv.sources]
torch = [
    { index = "pytorch-cu118", marker = "sys_platform == 'linux'" },
]

[[tool.uv.index]]
name = "tuna"
url = "https://pypi.tuna.tsinghua.edu.cn/simple"
default = true

[[tool.uv.index]]
name = "pytorch-cu118"
url = "https://download.pytorch.org/whl/cu118"
explicit = true
